--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -109,6 +109,7 @@ jobs:
       #    command: generate-lockfile
       - uses: Swatinem/rust-cache@v1
         with:
+          key: ${{ matrix.settings.target }}
           working-directory: 'tooling/cli.rs/'
       - name: Pull latest image
         run: ${{ matrix.settings.docker }}
