disable freebsd for now

--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -131,55 +131,55 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: tooling/cli.rs/node/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  build-freebsd:
-    runs-on: macos-10.15
-    name: Build FreeBSD
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        id: build
-        uses: vmactions/freebsd-vm@v0.1.5
-        env:
-          DEBUG: napi:*
-          RUSTUP_HOME: /usr/local/rustup
-          CARGO_HOME: /usr/local/cargo
-          RUSTUP_IO_THREADS: 1
-        with:
-          envs: DEBUG RUSTUP_HOME CARGO_HOME RUSTUP_IO_THREADS
-          usesh: true
-          mem: 3000
-          prepare: |
-            pkg install -y curl node14 python2
-            curl -qL https://www.npmjs.com/install.sh | sh
-            npm install -g yarn
-            curl https://sh.rustup.rs -sSf --output rustup.sh
-            sh rustup.sh -y --profile minimal --default-toolchain stable
-            export PATH="/usr/local/cargo/bin:$PATH"
-            echo "~~~~ rustc --version ~~~~"
-            rustc --version
-            echo "~~~~ node -v ~~~~"
-            node -v
-            echo "~~~~ yarn --version ~~~~"
-            yarn --version
-          run: |
-            export PATH="/usr/local/cargo/bin:$PATH"
-            pwd
-            ls -lah
-            whoami
-            env
-            freebsd-version
-            cd ./tooling/cli.rs/node/
-            yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
-            yarn build
-            strip -x *.node
-            rm -rf node_modules
-            rm -rf ../target
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: bindings-freebsd
-          path: tooling/cli.rs/node/${{ env.APP_NAME }}.*.node
-          if-no-files-found: error
+  #  build-freebsd:
+  #    runs-on: macos-10.15
+  #    name: Build FreeBSD
+  #    steps:
+  #      - uses: actions/checkout@v2
+  #      - name: Build
+  #        id: build
+  #        uses: vmactions/freebsd-vm@v0.1.5
+  #        env:
+  #          DEBUG: napi:*
+  #          RUSTUP_HOME: /usr/local/rustup
+  #          CARGO_HOME: /usr/local/cargo
+  #          RUSTUP_IO_THREADS: 1
+  #        with:
+  #          envs: DEBUG RUSTUP_HOME CARGO_HOME RUSTUP_IO_THREADS
+  #          usesh: true
+  #          mem: 3000
+  #          prepare: |
+  #            pkg install -y curl node14 python2
+  #            curl -qL https://www.npmjs.com/install.sh | sh
+  #            npm install -g yarn
+  #            curl https://sh.rustup.rs -sSf --output rustup.sh
+  #            sh rustup.sh -y --profile minimal --default-toolchain stable
+  #            export PATH="/usr/local/cargo/bin:$PATH"
+  #            echo "~~~~ rustc --version ~~~~"
+  #            rustc --version
+  #            echo "~~~~ node -v ~~~~"
+  #            node -v
+  #            echo "~~~~ yarn --version ~~~~"
+  #            yarn --version
+  #          run: |
+  #            export PATH="/usr/local/cargo/bin:$PATH"
+  #            pwd
+  #            ls -lah
+  #            whoami
+  #            env
+  #            freebsd-version
+  #            cd ./tooling/cli.rs/node/
+  #            yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
+  #            yarn build
+  #            strip -x *.node
+  #            rm -rf node_modules
+  #            rm -rf ../target
+  #      - name: Upload artifact
+  #        uses: actions/upload-artifact@v2
+  #        with:
+  #          name: bindings-freebsd
+  #          path: tooling/cli.rs/node/${{ env.APP_NAME }}.*.node
+  #          if-no-files-found: error
   test-macOS-windows-binding:
     name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
     needs:
@@ -384,7 +384,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs:
-      - build-freebsd
+      #- build-freebsd
       - test-macOS-windows-binding
       - test-linux-x64-gnu-binding
       - test-linux-x64-musl-binding
