--- a/tooling/cli.rs/node/package.json
+++ b/tooling/cli.rs/node/package.json
@@ -31,8 +31,7 @@
         "aarch64-unknown-linux-gnu",
         "aarch64-unknown-linux-musl",
         "armv7-unknown-linux-gnueabihf",
-        "x86_64-unknown-linux-musl",
-        "x86_64-unknown-freebsd"
+        "x86_64-unknown-linux-musl"
       ]
     }
   },
