revert: inject working-dir if needed

--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -12,6 +12,10 @@ env:
     branches:
       - 'feat/napi'
 
+defaults:
+  run:
+    working-directory: tooling/cli.rs/node/
+
 jobs:
   build:
     strategy:
@@ -35,14 +39,14 @@ jobs:
               docker pull $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-debian
               docker tag $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-debian builder
             build: |
-              docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
+              docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
           - host: ubuntu-18.04
             target: x86_64-unknown-linux-musl
             architecture: x64
             docker: |
               docker pull $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-alpine
               docker tag $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-alpine builder
-            build: docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
+            build: docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
           - host: macos-latest
             target: aarch64-apple-darwin
             build: |
@@ -74,7 +78,7 @@ jobs:
               docker pull ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
               docker tag ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine builder
             build: |
-              docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build --target=aarch64-unknown-linux-musl && /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip *.node"
+              docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build --target=aarch64-unknown-linux-musl && /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip *.node"
           #- host: windows-latest
           #  architecture: x64
           #  target: aarch64-pc-windows-msvc
@@ -117,10 +121,8 @@ jobs:
         if: ${{ matrix.settings.setup }}
         shell: bash
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Build
-        working-directory: tooling/cli.rs/node/
         run: ${{ matrix.settings.build }}
         shell: bash
       - name: Upload artifact
@@ -203,7 +205,6 @@ jobs:
           cache: yarn
           cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Download artifacts
         uses: actions/download-artifact@v2
@@ -211,11 +212,9 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: 'tooling/cli.rs/node/'
       - name: List packages
-        working-directory: tooling/cli.rs/node/
         run: ls -R .
         shell: bash
       - name: Test bindings
-        working-directory: tooling/cli.rs/node/
         run: yarn test
   test-linux-x64-gnu-binding:
     name: Test bindings on Linux-x64-gnu - node@${{ matrix.node }}
@@ -239,7 +238,6 @@ jobs:
           cache: yarn
           cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Download artifacts
         uses: actions/download-artifact@v2
@@ -247,7 +245,6 @@ jobs:
           name: bindings-x86_64-unknown-linux-gnu
           path: 'tooling/cli.rs/node/'
       - name: List packages
-        working-directory: tooling/cli.rs/node/
         run: ls -R .
         shell: bash
       - name: Test bindings
@@ -274,7 +271,6 @@ jobs:
           cache: yarn
           cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Download artifacts
         uses: actions/download-artifact@v2
@@ -282,7 +278,6 @@ jobs:
           name: bindings-x86_64-unknown-linux-musl
           path: 'tooling/cli.rs/node/'
       - name: List packages
-        working-directory: tooling/cli.rs/node/
         run: ls -R .
         shell: bash
       - name: Test bindings
@@ -308,11 +303,9 @@ jobs:
           name: bindings-aarch64-unknown-linux-gnu
           path: 'tooling/cli.rs/node/'
       - name: List packages
-        working-directory: tooling/cli.rs/node/
         run: ls -R .
         shell: bash
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --ignore-platform --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
@@ -337,11 +330,9 @@ jobs:
           name: bindings-aarch64-unknown-linux-musl
           path: 'tooling/cli.rs/node/'
       - name: List packages
-        working-directory: tooling/cli.rs/node/
         run: ls -R .
         shell: bash
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --ignore-platform --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
@@ -373,11 +364,9 @@ jobs:
           name: bindings-armv7-unknown-linux-gnueabihf
           path: 'tooling/cli.rs/node/'
       - name: List packages
-        working-directory: tooling/cli.rs/node/
         run: ls -R .
         shell: bash
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --ignore-platform --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
@@ -409,17 +398,14 @@ jobs:
           cache: yarn
           cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
       - name: Install dependencies
-        working-directory: tooling/cli.rs/node/
         run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
       - name: Download all artifacts
         uses: actions/download-artifact@v2
         with:
           path: tooling/cli.rs/node/artifacts
       - name: Move artifacts
-        working-directory: tooling/cli.rs/node/
         run: yarn artifacts
       - name: List packages
-        working-directory: tooling/cli.rs/node/
         run: ls -R ./npm
         shell: bash
       #- name: Publish
