run test only on windows

--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -383,11 +383,11 @@ jobs:
     needs:
       #- build-freebsd
       - test-macOS-windows-binding
-      - test-linux-x64-gnu-binding
-      - test-linux-x64-musl-binding
-      - test-linux-aarch64-gnu-binding
-      - test-linux-aarch64-musl-binding
-      - test-linux-arm-gnueabihf-binding
+      #- test-linux-x64-gnu-binding
+      #- test-linux-x64-musl-binding
+      #- test-linux-aarch64-gnu-binding
+      #- test-linux-aarch64-musl-binding
+      #- test-linux-arm-gnueabihf-binding
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
