--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -30,5 +30,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: yarn audit
-        working-directory: tooling/cli.js
+        working-directory: tooling/cli.rs/node
         run: yarn audit
