--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tauri-apps/tauri.git",
-    "directory": "tooling/cli.js"
+    "url": "https://github.com/tauri-apps/tauri.git"
   },
   "scripts": {
     "format": "prettier --write --end-of-line=auto \"./**/*.{cjs,js,jsx,ts,tsx,html,css,json}\" --ignore-path .gitignore",
