--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -54,6 +54,7 @@ glob = "0.3"
 heck = "0.4"
 dialoguer = "0.9"
 url = { version = "2.2", features = [ "serde" ] }
+os_pipe = "1"
 
 [target."cfg(windows)".dependencies]
 encode_unicode = "0.3"
