--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -7,10 +7,6 @@ env:
   workflow_dispatch:
   repository_dispatch:
     types: [publish-clijs]
-  # TODO: remove this!
-  push:
-    branches:
-      - 'feat/napi'
 
 defaults:
   run:
@@ -387,10 +383,10 @@ jobs:
       #- build-freebsd
       - test-macOS-windows-binding
       - test-linux-x64-gnu-binding
-      - test-linux-x64-musl-binding
-      - test-linux-aarch64-gnu-binding
-      - test-linux-aarch64-musl-binding
-      - test-linux-arm-gnueabihf-binding
+      #- test-linux-x64-musl-binding
+      #- test-linux-aarch64-gnu-binding
+      #- test-linux-aarch64-musl-binding
+      #- test-linux-arm-gnueabihf-binding
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
@@ -411,10 +407,10 @@ jobs:
       - name: List packages
         run: ls -R ./npm
         shell: bash
-      #- name: Publish
-      #  run: |
-      #    echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      #    npm publish
-      #  env:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #    NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Publish
+        run: |
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          npm publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
