--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tauri-apps/tauri.git",
-    "directory": "tooling/cli.js"
+    "url": "https://github.com/tauri-apps/tauri.git"
   },
   "scripts": {
     "format": "prettier --write --end-of-line=auto \"./**/*.{cjs,js,jsx,ts,tsx,html,css,json}\" --ignore-path .gitignore",
@@ -18,7 +17,7 @@
   "devDependencies": {
     "covector": "^0.5.3",
     "husky": "^6.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.5.1"
   },
   "dependencies": {
     "typescript": "^4.5.4"
