--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -1,4 +1,7 @@
-workspace = { }
+[workspace]
+members = [
+  "node"
+]
 
 [package]
 name = "tauri-cli"
@@ -51,6 +54,7 @@ glob = "0.3"
 heck = "0.4"
 dialoguer = "0.9"
 url = { version = "2.2", features = [ "serde" ] }
+os_pipe = "1"
 
 [target."cfg(windows)".dependencies]
 encode_unicode = "0.3"
@@ -68,3 +72,6 @@ serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 serde_with = "1.12"
 url = { version = "2.2", features = [ "serde" ] }
+
+[profile.release]
+lto = true
