chore: remove build test

--- a/tooling/cli.rs/node/package.json
+++ b/tooling/cli.rs/node/package.json
@@ -54,8 +54,7 @@
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
-    "test:local": "jest --runInBand --forceExit",
-    "test": "jest --runInBand --forceExit --no-cache --testPathIgnorePatterns=\"(build|dev)\"",
+    "test": "jest --runInBand --forceExit --no-cache",
     "version": "napi version",
     "tauri": "tauri",
     "format": "prettier --write ./package.json ./tauri.js",
